[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/UserInterface/PlayerCustomization/HairColorSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UserInterface/CustomizePlayer.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/PlayerImages.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/flat_pixel_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/icons/random.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/settings.png" type="Texture" id=6]
[ext_resource path="res://src/UserInterface/RandButton.gd" type="Script" id=7]
[ext_resource path="res://src/UserInterface/PlayerCustomization/SkinColorSelector.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/UserInterface/PlayerCustomization/ColorSwatch.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/UserInterface/PlayerCustomization/ColorSwatch.gd" type="Script" id=10]
[ext_resource path="res://src/UserInterface/PlayerCustomization/GunColorSelector.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/UserInterface/PlayerCustomization/DressColorSelector.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/UserInterface/PlayerCustomization/ShoesColorSelector.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/sound/customize_player_theme.mp3" type="AudioStream" id=14]
[ext_resource path="res://src/UserInterface/ButtonWithSound.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/icons/settings_pressed.png" type="Texture" id=16]
[ext_resource path="res://src/UserInterface/SoundControl.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/bg/menu_rio.png" type="Texture" id=18]

[node name="CustomizablePlayer" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 175.0 ],
"_edit_vertical_guides_": [ 157.0 ]
}

[node name="PlayerImages" parent="." instance=ExtResource( 3 )]
position = Vector2( 36, 34 )
scale = Vector2( 2, 2 )

[node name="CompositionalSprites" parent="PlayerImages" index="0"]
position = Vector2( 24.5, 20.5 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 148.0
margin_top = 22.0
margin_right = 303.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 11
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 155.0
margin_bottom = 19.0

[node name="HairChangeLeft" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 9.0
margin_bottom = 19.0
text = "<"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hair" type="RichTextLabel" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 13.0
margin_right = 83.0
margin_bottom = 19.0
rect_min_size = Vector2( 70, 0 )
bbcode_enabled = true
bbcode_text = "[center]Hair[/center]"
text = "Hair"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairChangeRight" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 87.0
margin_right = 96.0
margin_bottom = 19.0
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairColor" parent="Control/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 30.0
margin_right = 155.0
margin_bottom = 38.0

[node name="ColorSwatch" type="TextureButton" parent="Control/VBoxContainer/HairColor" instance=ExtResource( 9 )]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.678431, 0.709804, 0.760784, 1 )

[node name="ColorSwatch2" type="TextureButton" parent="Control/VBoxContainer/HairColor" instance=ExtResource( 9 )]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.996078, 0.823529, 0.443137, 1 )

[node name="ColorSwatch3" type="TextureButton" parent="Control/VBoxContainer/HairColor" instance=ExtResource( 9 )]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.537255, 0.788235, 0.00784314, 1 )

[node name="ColorSwatch4" type="TextureButton" parent="Control/VBoxContainer/HairColor" instance=ExtResource( 9 )]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.917647, 0.388235, 0.568627, 1 )

[node name="ColorSwatch5" type="TextureButton" parent="Control/VBoxContainer/HairColor" instance=ExtResource( 9 )]
margin_left = 48.0
margin_right = 56.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.92549, 0.121569, 0.0431373, 1 )

[node name="ColorSwatch6" type="TextureButton" parent="Control/VBoxContainer/HairColor" instance=ExtResource( 9 )]
margin_left = 60.0
margin_right = 68.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.6, 0.203922, 0.0901961, 1 )

[node name="ColorSwatch7" type="TextureButton" parent="Control/VBoxContainer/HairColor" instance=ExtResource( 9 )]
margin_left = 72.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.486275, 0.101961, 0.454902, 1 )
contour = true

[node name="ColorSwatch8" type="TextureButton" parent="Control/VBoxContainer/HairColor" instance=ExtResource( 9 )]
margin_left = 84.0
margin_right = 92.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.113725, 0.215686, 0.431373, 1 )

[node name="SkinColor" parent="Control/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 49.0
margin_right = 155.0
margin_bottom = 57.0

[node name="ColorSwatch" type="TextureButton" parent="Control/VBoxContainer/SkinColor" instance=ExtResource( 9 )]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 1, 0.713726, 0.670588, 1 )

[node name="ColorSwatch2" type="TextureButton" parent="Control/VBoxContainer/SkinColor" instance=ExtResource( 9 )]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.85098, 0.498039, 0.439216, 1 )

[node name="ColorSwatch3" type="TextureButton" parent="Control/VBoxContainer/SkinColor" instance=ExtResource( 9 )]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.764706, 0.345098, 0.219608, 1 )

[node name="ColorSwatch4" type="TextureButton" parent="Control/VBoxContainer/SkinColor" instance=ExtResource( 9 )]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.678431, 0.388235, 0.290196, 1 )
contour = true

[node name="ColorSwatch5" type="TextureButton" parent="Control/VBoxContainer/SkinColor" instance=ExtResource( 9 )]
margin_left = 48.0
margin_right = 56.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.54902, 0.278431, 0.196078, 1 )

[node name="ColorSwatch6" type="TextureButton" parent="Control/VBoxContainer/SkinColor" instance=ExtResource( 9 )]
margin_left = 60.0
margin_right = 68.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.678431, 0.192157, 0, 1 )

[node name="ColorSwatch7" type="TextureButton" parent="Control/VBoxContainer/SkinColor" instance=ExtResource( 9 )]
margin_left = 72.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.419608, 0.168627, 0.105882, 1 )

[node name="ColorSwatch8" type="TextureButton" parent="Control/VBoxContainer/SkinColor" instance=ExtResource( 9 )]
margin_left = 84.0
margin_right = 92.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.207843, 0.0509804, 0.00784314, 1 )

[node name="GunColor" parent="Control/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 68.0
margin_right = 155.0
margin_bottom = 76.0

[node name="ColorSwatch" type="TextureButton" parent="Control/VBoxContainer/GunColor" instance=ExtResource( 9 )]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.00392157, 1, 0.698039, 1 )

[node name="ColorSwatch2" type="TextureButton" parent="Control/VBoxContainer/GunColor" instance=ExtResource( 9 )]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.760784, 1, 0.0117647, 1 )

[node name="ColorSwatch3" type="TextureButton" parent="Control/VBoxContainer/GunColor" instance=ExtResource( 9 )]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.196078, 1, 0, 1 )

[node name="ColorSwatch4" type="TextureButton" parent="Control/VBoxContainer/GunColor" instance=ExtResource( 9 )]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 1, 0.486275, 0, 1 )

[node name="ColorSwatch5" type="TextureButton" parent="Control/VBoxContainer/GunColor" instance=ExtResource( 9 )]
margin_left = 48.0
margin_right = 56.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.243137, 0.537255, 0.882353, 1 )
contour = true

[node name="ColorSwatch6" type="TextureButton" parent="Control/VBoxContainer/GunColor" instance=ExtResource( 9 )]
margin_left = 60.0
margin_right = 68.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.964706, 0.152941, 0.482353, 1 )

[node name="ColorSwatch7" type="TextureButton" parent="Control/VBoxContainer/GunColor" instance=ExtResource( 9 )]
margin_left = 72.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.796078, 0.133333, 0.917647, 1 )

[node name="ColorSwatch8" type="TextureButton" parent="Control/VBoxContainer/GunColor" instance=ExtResource( 9 )]
margin_left = 84.0
margin_right = 92.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.196078, 0.156863, 0.317647, 1 )

[node name="DressColor" parent="Control/VBoxContainer" instance=ExtResource( 12 )]
margin_top = 87.0
margin_right = 155.0
margin_bottom = 95.0

[node name="ColorSwatch" type="TextureButton" parent="Control/VBoxContainer/DressColor" instance=ExtResource( 9 )]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 1, 0.956863, 0.415686, 1 )

[node name="ColorSwatch2" type="TextureButton" parent="Control/VBoxContainer/DressColor" instance=ExtResource( 9 )]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.243137, 0.643137, 0.976471, 1 )
contour = true

[node name="ColorSwatch3" type="TextureButton" parent="Control/VBoxContainer/DressColor" instance=ExtResource( 9 )]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.952941, 0.356863, 0.203922, 1 )

[node name="ColorSwatch4" type="TextureButton" parent="Control/VBoxContainer/DressColor" instance=ExtResource( 9 )]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.878431, 0.227451, 0.666667, 1 )

[node name="ColorSwatch5" type="TextureButton" parent="Control/VBoxContainer/DressColor" instance=ExtResource( 9 )]
margin_left = 48.0
margin_right = 56.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.262745, 0.458824, 0.25098, 1 )

[node name="ColorSwatch6" type="TextureButton" parent="Control/VBoxContainer/DressColor" instance=ExtResource( 9 )]
margin_left = 60.0
margin_right = 68.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.729412, 0.0784314, 0.12549, 1 )

[node name="ColorSwatch7" type="TextureButton" parent="Control/VBoxContainer/DressColor" instance=ExtResource( 9 )]
margin_left = 72.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.27451, 0.176471, 0.67451, 1 )

[node name="ColorSwatch8" type="TextureButton" parent="Control/VBoxContainer/DressColor" instance=ExtResource( 9 )]
margin_left = 84.0
margin_right = 92.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.388235, 0.129412, 0.168627, 1 )

[node name="ShoesColor" parent="Control/VBoxContainer" instance=ExtResource( 13 )]
margin_top = 106.0
margin_right = 155.0
margin_bottom = 114.0

[node name="ColorSwatch" type="TextureButton" parent="Control/VBoxContainer/ShoesColor" instance=ExtResource( 9 )]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.635294, 0.545098, 0.52549, 1 )

[node name="ColorSwatch2" type="TextureButton" parent="Control/VBoxContainer/ShoesColor" instance=ExtResource( 9 )]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.466667, 0.4, 0.498039, 1 )

[node name="ColorSwatch3" type="TextureButton" parent="Control/VBoxContainer/ShoesColor" instance=ExtResource( 9 )]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.415686, 0.415686, 0.380392, 1 )

[node name="ColorSwatch4" type="TextureButton" parent="Control/VBoxContainer/ShoesColor" instance=ExtResource( 9 )]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.321569, 0.309804, 0.368627, 1 )

[node name="ColorSwatch5" type="TextureButton" parent="Control/VBoxContainer/ShoesColor" instance=ExtResource( 9 )]
margin_left = 48.0
margin_right = 56.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.141176, 0.12549, 0.203922, 1 )

[node name="ColorSwatch6" type="TextureButton" parent="Control/VBoxContainer/ShoesColor" instance=ExtResource( 9 )]
margin_left = 60.0
margin_right = 68.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.105882, 0.109804, 0.0980392, 1 )

[node name="ColorSwatch7" type="TextureButton" parent="Control/VBoxContainer/ShoesColor" instance=ExtResource( 9 )]
margin_left = 72.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.054902, 0.0470588, 0.0823529, 1 )
contour = true

[node name="ColorSwatch8" type="TextureButton" parent="Control/VBoxContainer/ShoesColor" instance=ExtResource( 9 )]
margin_left = 84.0
margin_right = 92.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.0156863, 0.0156863, 0.0705882, 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 125.0
margin_right = 155.0
margin_bottom = 144.0

[node name="Rand" type="Button" parent="Control/VBoxContainer/HBoxContainer2"]
margin_right = 42.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 15 )
text = "      "
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/VBoxContainer/HBoxContainer2/Rand"]
position = Vector2( 19, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="StartGame" parent="Control/VBoxContainer/HBoxContainer2" instance=ExtResource( 15 )]
margin_left = 46.0
margin_right = 90.0
margin_bottom = 19.0
text = "Play"

[node name="Background" type="CanvasLayer" parent="Control"]
layer = -6

[node name="Sprite" type="Sprite" parent="Control/Background"]
position = Vector2( 160, 90 )
texture = ExtResource( 18 )

[node name="ColorRect3" type="ColorRect" parent="Control/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.50376, 2.12089 )
color = Color( 0.270588, 0.337255, 0.517647, 0.870588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
autoplay = true
bus = "Music"

[node name="SettingsButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.27451 )
margin_left = 302.0
margin_top = 2.0
margin_right = 319.0
margin_bottom = 19.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundControl" parent="." instance=ExtResource( 17 )]
visible = false

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/HairChangeLeft" to="." method="_on_HairChangeLeft_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/HairChangeRight" to="." method="_on_HairChangeRight_pressed"]
[connection signal="color_changed" from="Control/VBoxContainer/HairColor" to="." method="_on_HairColor_color_changed"]
[connection signal="color_changed" from="Control/VBoxContainer/SkinColor" to="." method="_on_SkinTone_color_changed"]
[connection signal="color_changed" from="Control/VBoxContainer/GunColor" to="." method="_on_GunColorSelector_color_changed"]
[connection signal="color_changed" from="Control/VBoxContainer/DressColor" to="." method="_on_DressColor_color_changed"]
[connection signal="color_changed" from="Control/VBoxContainer/ShoesColor" to="." method="_on_ShoesColor_color_changed"]
[connection signal="button_down" from="Control/VBoxContainer/HBoxContainer2/Rand" to="Control/VBoxContainer/HBoxContainer2/Rand" method="_on_Rand_button_down"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer2/Rand" to="Control/VBoxContainer/HBoxContainer2/Rand" method="_on_Rand_button_up"]
[connection signal="mouse_entered" from="Control/VBoxContainer/HBoxContainer2/Rand" to="Control/VBoxContainer/HBoxContainer2/Rand" method="_on_Rand_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/HBoxContainer2/Rand" to="Control/VBoxContainer/HBoxContainer2/Rand" method="_on_Rand_mouse_exited"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/Rand" to="." method="_on_Rand_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]

[editable path="PlayerImages"]
